# General-Autonomy-Protocol

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  bug_report.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
action-types/: README.md  financial_transaction.md
docs/: CONFORMANCE.md  PROTOCOL_SPECIFICATION.md  REMEDIATION_PLAN.md  gap-governance-integrity-monitoring.md  gap-governance-safety-audit-2026-03.md  gap-governance-safety-audit-2026-06.md  gap-structured-intent-resolution.md
gap_kernel/: __init__.py  errors.py
gap_kernel/api/: app.py
gap_kernel/client/: __init__.py  governance_client.py
gap_kernel/crypto/: __init__.py  signing.py
gap_kernel/execution/: fabric.py  sub_agent_executor.py
gap_kernel/governance/: action_classifier.py  corrigibility.py  deployment.py  dynamic_risk.py  independent_review.py  integrity_monitor.py  kernel.py  multi_agent.py  profile.py  self_evolution.py  sir.py
gap_kernel/learning/: engine.py
gap_kernel/lineage/: store.py
gap_kernel/models/: __init__.py  execution.py  governance.py  intent.py  learning.py  lineage.py  reconciler.py  sir.py  strategy.py  world.py
gap_kernel/reconciler/: loop.py
gap_kernel/service/: __init__.py  kernel_server.py
gap_kernel/strategy/: cga_loop.py
gap_kernel/verification/: __init__.py  oob_ledger.py
gap_kernel/world_model/: store.py
tests/: test_action_classifier.py  test_adversarial.py  test_api.py  test_approval_gating.py  test_cga_loop.py  test_corrigibility.py  test_decision_integrity.py  test_deployment.py  test_dynamic_risk.py  test_e2e_crm_scenario.py  test_execution.py  test_fail_closed.py  test_gim.py  test_governance.py  test_independent_review.py  test_integration.py  test_kernel_service.py  test_learning.py  test_lineage.py  test_models.py  test_multi_agent.py  test_oob_verification.py  test_property_based.py  test_reconciler.py  test_regulatory_categories.py  test_self_evolution.py  test_sir.py  test_sir_meta_intent.py  test_spec_20260220.py  test_sub_agent_executor.py  test_tier_enforcement.py
