[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gap-kernel"
version = "0.1.0-alpha"
description = "General Autonomy Protocol — Kernel Implementation"
authors = [{name = "Nexeom"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "croniter>=2.0,<7",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "langgraph>=0.2,<1.0",
    "langchain-core>=0.3,<1.0",
    "langchain-anthropic>=0.3,<1.0",
    "langchain-openai>=0.3,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/Nexeom/General-Autonomy-Protocol"
Repository = "https://github.com/Nexeom/General-Autonomy-Protocol"
Issues = "https://github.com/Nexeom/General-Autonomy-Protocol/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["gap_kernel*"]
